mysql-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: mysql
spec:
  selector:
    matchLabels:
      app: mysql-app
  replicas: 2
  template:
    metadata:
      labels:
        app: mysql-app
    spec:
      containers:
      - env:
        - name: MYSQL_ROOT_PASSWORD
          valueFrom:
           secretKeyRef:
             name: mysql-secret
             key: password
        name: mysql
        image: mysql:8.4
        ports:
        - containerPort: 3306
          name: web
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
      volumes:
      - persistentVolumeClaim:
          claimName: mysql-pvc
        name: mysql-data
