mysql-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
spec:
  selector:
    app: mysql-app
  ports:
  - port: 3306
    targetPort: 3306
