phpmyadmin-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-svc
  namespace: mysql
spec:
  selector:
    app: phpMyAdmin
  ports:
  - port: 80
    targetPort: 80
