mysql-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-ing
  namespace: mysql
spec:
  rules:
  - host: gvdganesh.info
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mysql-svc
            port: 
              number: 3306
